# NSAD

./: README.md  pyproject.toml
doc/: README.md  architecture.md
doc/explorations/: hydraulic_exploration.md  paderborn_exploration.md
doc/paper/: abstract.md  claim_evidence_map.md  paper_draft.md  paper_v2_outline.md  scoreboard.md
doc/preregistrations/: experiment_plan_density_invariance.md  experiment_plan_hydraulic.md  experiment_plan_ims.md  experiment_plan_multivariate.md  experiment_plan_paderborn.md  experiment_plan_paderborn2.md  experiment_plan_paderborn3.md  nsad_deployment_principles.md
lambda3_detector/: README.md  __init__.py  config.py  detector.py  detector_dual.py  io_utils.py  visualization.py
lambda3_detector/adapters/: __init__.py  vibration.py
lambda3_detector/analysis/: __init__.py  drift_detection.py  multiscale_jumps.py  physical_quantities.py  structure_tensor.py  structure_tensor_sparse.py
lambda3_detector/core/: __init__.py  adaptive_params.py  entropy_jit.py  inverse_problem_jit.py  inverse_problem_sparse_jit.py  jumps_jit.py  kernels_jit.py  pulsation_jit.py  topology_jit.py
lambda3_detector/features/: __init__.py  extractor.py  optimizer.py
lambda3_detector/gpu/: __init__.py  backend.py  inverse_sparse_gpu.py  scorers_gpu.py
lambda3_detector/regime/: __init__.py  commissioning.py  regime_detector.py
lambda3_detector/scorers/: __init__.py  base.py  drift_scorer.py  gradual_scorer.py  hybrid_scorer.py  jump_scorer.py  kernel_scorer.py  polarity.py  score_integrator.py  structural_drift_scorer.py  structural_scorer.py
lambda3_detector/streaming/: __init__.py  base.py  detector.py  drift_streaming.py  gradual_streaming.py  jump_streaming.py  kernel_streaming.py  periodic_streaming.py  reconstruction_streaming.py  structural_streaming.py
paper_results/: density_feasibility.csv  density_invariance.csv  density_severity.csv  hydraulic_seed_stage.csv  hydraulic_seed_summary.csv  ims_summary.csv  ims_trajectories.npz  manifest.json  milling_wear.csv  paderborn_commissioning.csv  paderborn_severity.csv  paderborn_support_candidates.csv  statistical_audit.csv
tests/: README.md  __init__.py
(+63 files in other folders)
