[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda3-detector"
version = "0.1.1"
description = "Lambda³ Zero-Shot Anomaly Detection — physics-based, training-free anomaly detection via ΔΛC jumps and topological invariants."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "miosync-masa" },
]
keywords = [
    "anomaly-detection",
    "zero-shot",
    "structure-tensor",
    "topology",
    "time-series",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.0",
    "numba>=0.56.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "PyWavelets>=1.1.1",
    "joblib>=1.1.0",
]

[project.optional-dependencies]
# GPU (Colab default). Pick cupy-cuda12x or cupy-cuda11x based on CUDA toolkit.
gpu = [
    "cupy-cuda12x; platform_system != 'Darwin'",
]
# Plotting / network diagrams
viz = [
    "matplotlib>=3.4.0",
    "networkx>=2.6.0",
]
# NAB official Sweeper integration for tests/benchmark_nab.py
nab = [
    # NAB is not on PyPI — see README for `git clone numenta/NAB` instructions.
    # The benchmark imports `nab.sweeper.Sweeper` from sys.path on the cloned repo.
]
# Tests / linting
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
# Everything
all = [
    "lambda3-detector[gpu,viz,dev]",
]

[project.urls]
Homepage = "https://github.com/miosync-masa/NSAD"
Repository = "https://github.com/miosync-masa/NSAD"

[tool.setuptools.packages.find]
where = ["."]
include = ["lambda3_detector*"]
exclude = ["tests*", "NAB*"]

[tool.setuptools.package-data]
lambda3_detector = ["*.md"]
